--- a/redux-todo/package.json
+++ b/redux-todo/package.json
@@ -18,6 +18,7 @@
     "babel-loader": "^8.0.6",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
